fix: not all weekdays being visible #2581

--- a/src/app/pages/config-page/config-page.component.scss
+++ b/src/app/pages/config-page/config-page.component.scss
@@ -71,7 +71,3 @@
     display: none;
   }
 }
-
-::ng-deep .ng-tns-c194-50 .ng-trigger {
-  max-height: fit-content;
-}
